--- a/brain-core-api/src/main/resources/application.properties
+++ b/brain-core-api/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 8009
 
 spring.application.name=BRAIN-SERVICE
 
-eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.client.service-url.default-zone=http://server_container:8761/eureka
 spring.main.allow-bean-definition-overriding=true
 
 logging.file=D:/apps-webservices.log
