--- a/brain-zuul/src/main/resources/application.properties
+++ b/brain-zuul/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port=3000
 spring.application.name=zuul-server
-eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+eureka.client.service-url.default-zone=http://server_container:8761/eureka/
+eureka.client.serviceUrl.defaultZone=http://server_container:8761/eureka/
 
 # A prefix that can added to beginning of all requests. 
 #zuul.prefix=/api
