--- a/brain-frontend-style/DockerFileDev
+++ b/brain-frontend-style/DockerFileDev
@@ -12,9 +12,11 @@ COPY brain-frontend-style/package.json /app/package.json
 
 RUN npm install
 RUN npm update
+RUN npm install -g @angular/cli
+RUN ng update @angular/cli --migrate-only --from=8.3.13
 
 # add app
 COPY brain-frontend-style/. /app
 
 # start app
-CMD ng serve --host 0.0.0.0
+CMD app/ng serve --host 0.0.0.0
