travis file update

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,17 @@
 sudo: required
 services:
         -docker
-before_install:
-        -docker-compose build
+script:
+        -docker build -f DockeFileDev -t sushilis/mserver .brain-server
+        -docker build -f DockeFileDev -t sushilis/mMysql ./Mysql
+        -docker build -f DockeFileDev -t sushilis/mcore ./brain-core-api
+        -docker build -f DockeFileDev -t sushilis/mzuul ./brain-zuul
+        
+        -echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
+        
+        -docker push sushilis/mserver
+        -docker push  sushilis/mMysql
+        -docker push sushilis/mcore
+        -docker push sushilis/mzuul
+        
+        
