--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ script:
         -echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
         
         -docker push sushilis/mserver
-        -docker push  sushilis/mMysql
+        -docker push  sushilis/mmysql
         -docker push sushilis/mcore
         -docker push sushilis/mzuul
 
