--- a/brain-auth/DockerFileDev
+++ b/brain-auth/DockerFileDev
@@ -4,7 +4,7 @@
 FROM maven:3.6.0-jdk-11-slim AS build
 COPY brain-auth/src /home/app/src
 COPY brain-auth/pom.xml /home/app
-RUN mvn -f /home/app/pom.xml clean package
+RUN mvn -B -f /home/app/pom.xml clean package
 
 #
 # Package stage
