--- a/brain-auth/src/main/resources/application.yml
+++ b/brain-auth/src/main/resources/application.yml
@@ -11,6 +11,7 @@ spring:
                              format_sql: false
                              dialect: org.hibernate.dialect.MySQL5InnoDBDialect
       datasource:
-               url: jdbc:mysql://sql:3306/optimisation?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8&autoReconnect=true
-               username: root
-               password: root
+               url: ${MYSQL_URL}
+               username: ${MYSQL_USER}
+               password: ${MYSQL_PASS}
+               initialization-mode: always
