--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ script:
 deploy:
   provider: elasticbeanstalk
   access_key_id: "AKIA4I23DLTGLQNTZ4ES"
-  secret_access_key:
-    secure: "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"
+  secret_access_key: "qRxnlyWKuMpQSeZ61nMgm/MV0sg6Dvr661X9QGP2"
   region: "ap-south-1"
   app: "resopt-docker"
   env: "ResoptDocker-env"
