--- a/.travis.yml
+++ b/.travis.yml
@@ -20,8 +20,8 @@ script:
 
 deploy:
   provider: elasticbeanstalk
-  access_key_id: "AKIA4I23DLTGLQNTZ4ES"
-  secret_access_key: "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"
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
   region: "ap-south-1"
   app: "resopt-docker"
   env: "ResoptDocker-env"
