--- a/brain-auth/src/main/resources/application.yml
+++ b/brain-auth/src/main/resources/application.yml
@@ -13,5 +13,5 @@ spring:
       datasource:
                url: jdbc:mysql://${SQL_URL}:${SQL_PORT}/optimisation?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&useUnicode=true&characterEncoding=utf-8&autoReconnect=true
                username: root
-               password: root
+               password: rootroot
                initialization-mode: always
