--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,8 @@ deploy:
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
   region: "ap-south-1"
-  app: "resopt-docker"
-  env: "ResoptDocker-env"
+  app: "resopt-docker-poc"
+  env: "ResoptDockerPoc-env"
   bucket_name: "elasticbeanstalk-ap-south-1-843615263948"
   bucker_path: "resopt-docker-poc"
           
