--- a/brain-core-api/src/main/resources/application.properties
+++ b/brain-core-api/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port = 8009
 
 spring.application.name=BRAIN-SERVICE
 
-eureka.client.service-url.default-zone=http://${EUREKA_SERVER_URL}/eureka/
-eureka.client.serviceUrl.defaultZone=http://${EUREKA_SERVER_URL}/eureka/
+eureka.client.service-url.default-zone=http://server/eureka/
+eureka.client.serviceUrl.defaultZone=http://server/eureka/
 spring.main.allow-bean-definition-overriding=true
 
 logging.file=D:/apps-webservices.log
