--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ deploy:
   provider: elasticbeanstalk
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key: $AWS_SECRET_KEY
-  region: "ap-south-1"
+  region: "us-east-1"
   app: "resopt-docker"
   env: "ResoptDocker-env"
   bucket_name: "elasticbeanstalk-ap-south-1-843615263948"
